Fixed Flyout overflow

--- a/src/components/Flyout/style.less
+++ b/src/components/Flyout/style.less
@@ -42,6 +42,6 @@
 	
 	.flyout-content {
 		padding: 12px;
-		overflow-y: auto;
+		overflow: hidden;
 	}
 }
